# titanic-ml

./: .gitignore  README.md  pyproject.toml
src/: app.py  eda.ipynb
src/data/: feature_names.pkl  model.pkl
